--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,20 @@
 [package]
-name = "backup-logger"
+name = "file-backup-logger"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
+description = "Backs up files/directories with versioning, ZIP-compression, configurable GUI and detailed logs."
 
 [dependencies]
+clap = { version = "4.5", features = ["derive"] }
+walkdir = "2.5"
+fs_extra = "1.3"
+chrono = "0.4"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+directories = "6.0.0"
+log = "0.4"
+fern = "0.7.1"
+anyhow = "1.0"
+zip = { version = "4.3.0", default-features = false, features = ["deflate"] }
+eframe = "0.32.0"
+rfd = "0.15.4"
